Funcionalidad parcial del formulario de nueva obra. Internacionalización de las vistas existentes.
EL formulario registra las obras (pero falla en registrar sus géneros). falta validar los checkbox (al menos uno seleccionado). Falta funcionalidad para cargar portada.

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -1,6 +1,132 @@
-#Registry form labels
+#Header 
 
+label.buscar=Search
+label.isesion=Log in
+
+#Profile Menu
+
+label.isesion=Log in
+label.usuario=User
+label.clave=Password
+label.uinvalido=Invalid User
+label.cinactiva=Inactive account
+label.registrarse= Sign in
+label.olvidocon=¿Forgot your password?
+label.perfil=Profile
+label.nobra=+Work
+label.ncapitulo=+Chapter
+label.cambiarcon=Change password
+label.cerrarsesion=Log out
+label.aseguidos=Followed Authors
+label.vertodos=See all
+label.verreportes=See reports
+label.rpendientes=Pending reports
+label.obloqueadas=Blocked works
+label.ubloqueados=Blocked Users
+
+#Registry form 
+label.crearc=Create account
 label.nombre=Name
+label.apaterno=Last name
+label.amaterno=Mother's last name
+label.email=E-mail
+label.cemail=Confirm e-mail
+label.cclave=Confirm password
+label.pais=Country
+label.fnacimiento=Birthdate
+label.anio=Year
+label.mes=Month
+label.dia=Day
+label.enero=January
+label.febrero=February
+label.marzo=March
+label.abril=April
+label.mayo=May
+label.junio=June
+label.julio=July
+label.agosto=August
+label.septiembre=September
+label.octubre=October
+label.noviembre=November
+label.diciembre=December
+label.mujer=Female
+label.hombre=Male
+
+#Recover password
+
+label.recuperarclave=Restore password
+label.enviarcontra=Send me a new password
+
+#Change password
+
+label.claveactual= Current password
+label.nclave=New password
+label.cnclave=Confirm new password
+
+#New work form
+
+label.titulo=Title
+label.idioma=Language
+label.español=Spanish
+label.ingles=English
+label.genero=Genre
+label.sinopsis=Synopsis
+label.crearo=Create work
+
+#Genre
+
+label.comedia=Comedy
+label.cuento=Fable
+label.drama=Drama
+label.fantasia=Fantasy
+label.sci-fi= Sci-fi
+label.historico=Historical
+label.misterio=Mystery
+label.suspenso=Suspense
+label.terror=Terror
+label.tragedia=Tragedy
+label.romance=Romance
+label.poesia=Poetry
+
+#Messages view
+
+label.activarcu=Activate account
+label.clickboton=To activate your account, please click on the button below
+label.bienvenido=Welcome
+label.cuentaasoc=The account asociated to the e-mail address 
+label.quedadoactivada=has been activated. You can log in now.
+label.claveres=Your password has been reset
+label.correoclave=We have sent you an e-mail with your new password
+label.correoinvalido=Invalid e-mail address
+label.correonoreg=The e-mail address is not registered
+label.claveexito=Pasword successfully changed
+label.clavecambiada=Your password has been modified successfully
+label.claveactualmal=Incorrect current password
+label.clavemalmen=The current password introduced is incorrect
+label.registrocompleto=Account successfully registered
+label.correoactivacion=We have sent you a confirmation e-mail
 
 
+#Perfil usuario
 
+label.seguidores=Followers
+label.seudo=Pseudonym
+label.redes=Social networks
+label.sexo=Gender
+label.biografia=Biography
+label.agregarlib=Add work
+label.editarp=Edit profile
+label.cancelar=Cancel
+label.guardar=Save
+label.phbio=Author's biography
+label.formatofecha=YYYY/MM/DD
+
+#Menú filtros
+
+label.selidioma=Choose language
+label.selgenero=Choose genre
+label.rankinga=Author's ranking
+label.fechapub=Publication date
+label.numcaps=Number of chapters
+label.numero=Number
+label.popularidad=Popularity
