--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -1,3 +1,135 @@
-#Etiquetas del formulario de registro
+#Cabecera
 
+label.buscar=Buscar
+label.isesion=Iniciar sesión
+
+#Menu de usuario
+
+label.isesion=Iniciar sesion
+label.usuario=Usuario
+label.clave=Contraseña
+label.uinvalido= Usuario Inválido
+label.cinactiva= Cuenta Inactiva
+label.registrarse= Registrarse
+label.olvidocon=¿Olvidó su contraseña?
+label.perfil=Perfil
+label.nobra=+Obra
+label.ncapitulo=+Capítulo
+label.cambiarcon=Cambiar Contraseña
+label.cerrarsesion=Cerrar sesión
+label.aseguidos=Autores seguidos
+label.vertodos=Ver todos
+label.verreportes=Ver reportes
+label.rpendientes=Reportes pendientes
+label.obloqueadas=Obras bloqueadas
+label.ubloqueados=Usuarios bloqueados
+
+
+#Formulario de registro
+
+label.crearc=Crear Cuenta
 label.nombre=Nombre
+label.apaterno= Apellido paterno
+label.amaterno= Apellido materno
+label.email=Correo electrónico
+label.cemail=Confirmar correo
+label.cclave=Confirmar contraseña
+label.pais=País
+label.fnacimiento=Fecha de nacimiento
+label.anio=Año
+label.mes=Mes
+label.dia=Dia
+label.enero=Enero
+label.febrero=Febrero
+label.marzo=Marzo
+label.abril=Abril
+label.mayo=Mayo
+label.junio=Junio
+label.julio=Julio
+label.agosto=Agosto
+label.septiembre=Septiembre
+label.octubre=Octubre
+label.noviembre=Noviembre
+label.diciembre=Diciembre
+label.mujer=Mujer
+label.hombre=Hombre
+
+#Recuperar contraseña
+
+label.recuperarclave=Recuperar contraseña
+label.enviarcontra=Enviame la contraseña
+
+#Cambiar contraseña
+
+label.claveactual= Contraseña Actual
+label.nclave=Nueva contraseña
+label.cnclave=Confirmar nueva contraseña
+
+#Formulario nueva obra
+
+label.titulo=Título
+label.idioma=Idioma
+label.español=Español
+label.ingles=Inglés
+label.genero=Género
+label.sinopsis=Sinopsis
+label.crearo=Crear Obra
+
+
+#Generos
+
+label.comedia=Comedia
+label.cuento=Cuento
+label.drama=Drama
+label.fantasia=Fantasía
+label.sci-fi= Ciencia ficción
+label.historico=Histórico
+label.misterio=Misterio
+label.suspenso=Suspenso
+label.terror=Terror
+label.tragedia=Tragedia
+label.romance=Romance
+label.poesia=Poesía
+
+#Vista de mensajes
+
+label.activarcu=Activar cuenta
+label.clickboton=Para activar tu cuenta da click en el siguiente botón
+label.bienvenido=Bienvenido
+label.cuentaasoc=Tu cuenta asociada al correo 
+label.quedadoactivada=ha quedado activada. Ahora ya puedes iniciar sesión.
+label.claveres=Tu contraseña ha sido reestablcida.
+label.correoclave=Te hemos enviado un correo con tu nueva contraseña
+label.correoinvalido=Correo electrónico inválido
+label.correonoreg=La dirección de correo electrónico no se encuentra registrada
+label.claveexito=Contraseña modificada con éxito
+label.clavecambiada=Su contraseña se ha modificado con éxito.
+label.claveactualmal=Contraseña actual incorrecta
+label.clavemalmen=La contraseña actual introducida es incorrecta
+label.registrocompleto=Cuenta registrada con éxito
+label.correoactivacion=Te hemos enviado un correo de confirmación a la dirección proporcionada
+
+
+#Perfil usuario
+
+label.seguidores=Seguidores
+label.seudo=Seudónimo
+label.redes=Redes Sociales
+label.sexo=Sexo
+label.biografia=Biografía
+label.agregarlib=Agregar libro
+label.editarp=Editar perfil
+label.cancelar=Cancelar
+label.guardar=Guardar
+label.phbio=Biografia del autor
+label.formatofecha=AAAA/MM/DD
+
+#Menú filtros
+
+label.selidioma=Selecciona el idioma
+label.selgenero=Seleccione el género
+label.rankinga=Ranking del autor
+label.fechapub=Fecha de publicación
+label.numcaps=Número de capítulos
+label.numero=Número
+label.popularidad=Popularidad
