funcionalidad de siguir usuario terminado

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -1,7 +1,6 @@
 #Header 
 
 label.buscar=Search
-label.isesion=Log in
 
 #Profile Menu
 
@@ -116,6 +115,8 @@ label.sexo=Gender
 label.biografia=Biography
 label.agregarlib=Add work
 label.editarp=Edit profile
+label.seguirp=Follow
+label.dseguirp=Unfollow
 label.cancelar=Cancel
 label.guardar=Save
 label.phbio=Author's biography
