--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -1,7 +1,6 @@
 #Cabecera
 
 label.buscar=Buscar
-label.isesion=Iniciar sesión
 
 #Menu de usuario
 
@@ -119,6 +118,8 @@ label.sexo=Sexo
 label.biografia=Biografía
 label.agregarlib=Agregar libro
 label.editarp=Editar perfil
+label.seguirp=Seguir
+label.dseguirp=Dejar de seguir
 label.cancelar=Cancelar
 label.guardar=Guardar
 label.phbio=Biografia del autor
