Vista de crear capitulo añadida con funcionalidad
Se agrego la vista de crear capítulo
se agrego la funcionalidad de dicha vista
Se añadio el servlet que controla la creacion de capitulos
Se añadio la libreria  apache commons IO 2.5
Agregado metodo para guardar capitulo a la clase Archivos

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -106,7 +106,7 @@ label.registrocompleto=Account successfully registered
 label.correoactivacion=We have sent you a confirmation e-mail
 
 
-#Perfil usuario
+#User profile
 
 label.seguidores=Followers
 label.seudo=Pseudonym
@@ -122,7 +122,8 @@ label.guardar=Save
 label.phbio=Author's biography
 label.formatofecha=YYYY/MM/DD
 
-#Menú filtros
+
+#Filter menu
 
 label.selidioma=Choose language
 label.selgenero=Choose genre
@@ -131,3 +132,10 @@ label.fechapub=Publication date
 label.numcaps=Number of chapters
 label.numero=Number
 label.popularidad=Popularity
+
+#New chapter
+
+label.agregarcap=New chapter
+label.numcap=Chapter's number
+label.titulocap=Chapter's title
+label.capitulo=Chapter
