--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -125,6 +125,7 @@ label.guardar=Guardar
 label.phbio=Biografia del autor
 label.formatofecha=AAAA/MM/DD
 
+
 #Menú filtros
 
 label.selidioma=Selecciona el idioma
@@ -134,3 +135,11 @@ label.fechapub=Fecha de publicación
 label.numcaps=Número de capítulos
 label.numero=Número
 label.popularidad=Popularidad
+
+
+#Nuevo Capitulo
+
+label.agregarcap=Agregar capítulo
+label.numcap=Número de capítulo
+label.titulocap=Título del capítulo
+label.capitulo=Capítulo
