cambio en las etiquetas de spring
modificacion en las etiquetas de genero en los diccionarios.

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -74,18 +74,18 @@ label.crearo=Create work
 
 #Genre
 
-label.comedia=Comedy
-label.cuento=Fable
-label.drama=Drama
-label.fantasia=Fantasy
-label.sci-fi= Sci-fi
-label.historico=Historical
-label.misterio=Mystery
-label.suspenso=Suspense
-label.terror=Terror
-label.tragedia=Tragedy
-label.romance=Romance
-label.poesia=Poetry
+label.genero1=Comedy
+label.genero2=Fable
+label.genero3=Drama
+label.genero4=Fantasy
+label.genero5= Sci-fi
+label.genero6=Historical
+label.genero7=Mystery
+label.genero8=Suspense
+label.genero9=Terror
+label.genero10=Tragedy
+label.genero11=Romance
+label.genero12=Poetry
 
 #Messages view
 
