--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -77,18 +77,18 @@ label.crearo=Crear Obra
 
 #Generos
 
-label.comedia=Comedia
-label.cuento=Cuento
-label.drama=Drama
-label.fantasia=Fantasía
-label.sci-fi= Ciencia ficción
-label.historico=Histórico
-label.misterio=Misterio
-label.suspenso=Suspenso
-label.terror=Terror
-label.tragedia=Tragedia
-label.romance=Romance
-label.poesia=Poesía
+label.genero1=Comedia
+label.genero2=Cuento
+label.genero3=Drama
+label.genero4=Fantasía
+label.genero5= Ciencia ficción
+label.genero6=Histórico
+label.genero7=Misterio
+label.genero8=Suspenso
+label.genero9=Terror
+label.genero10=Tragedia
+label.generp11=Romance
+label.genero12=Poesía
 
 #Vista de mensajes
 
