Correccion de la correccion
etiqueta diccionario

--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -87,7 +87,7 @@ label.genero7=Misterio
 label.genero8=Suspenso
 label.genero9=Terror
 label.genero10=Tragedia
-label.generp11=Romance
+label.genero11=Romance
 label.genero12=Poesía
 
 #Vista de mensajes
