Vista de denuncias funcional
Vista, servlet, funcionalidad hechas.

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -139,3 +139,13 @@ label.agregarcap=New chapter
 label.numcap=Chapter's number
 label.titulocap=Chapter's title
 label.capitulo=Chapter
+
+#Report form
+
+label.reportarobra=Report Work
+label.razondenuncia=Reason 
+label.razon1=Inapropiate content
+label.razon2=Copyright infringement
+label.descripcion=Description
+label.mensajedenuncia=Please describe the reason of your report
+label.reportar=Report
