--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -143,3 +143,14 @@ label.agregarcap=Agregar capítulo
 label.numcap=Número de capítulo
 label.titulocap=Título del capítulo
 label.capitulo=Capítulo
+
+
+#Formulario de reporte
+
+label.reportarobra=Denunciar obra
+label.razondenuncia=Motivo de la denuncia
+label.razon1=Contenido inapropiado
+label.razon2=Infringimiento de derechos de autor
+label.descripcion=Descripción
+label.mensajedenuncia=Por favor describa a detalle el motivo de su denuncia
+label.reportar=Reportar
