Internacionalización de las vistas hecha
se internacionalizaron las vistas faltantes,
añadido el botón de cancelar a la vista editar obra.
Agregada redireccion a perfil de obra luego de añadir capitulo
Corrección en la vista leer (mostrar numero de capitulo en vez de id)

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -149,3 +149,19 @@ label.razon2=Copyright infringement
 label.descripcion=Description
 label.mensajedenuncia=Please describe the reason of your report
 label.reportar=Report
+
+#Work Profile
+
+label.obrap=Work's profile
+label.autor=Author
+label.generos=Genres
+label.editarobra=Edit work
+label.agregarcapitulo=Add chapter
+label.leer=Read
+
+#Languages
+
+#Idiomas
+label.idioma1=Spanish
+label.idioma2=English
+
