--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -154,3 +154,19 @@ label.razon2=Infringimiento de derechos de autor
 label.descripcion=Descripción
 label.mensajedenuncia=Por favor describa a detalle el motivo de su denuncia
 label.reportar=Reportar
+
+
+#Perfil de obra
+
+label.obrap=Perfil de obra
+label.autor=Autor
+label.generos=Generos
+label.editarobra=Editar obra
+label.agregarcapitulo=Agregar capítulo
+label.leer=Leer
+
+#Idiomas
+label.idioma1=Español
+label.idioma2=Inglés
+
+
