internacionalización agregada a las vistas faltantes. algunos detalles menores.

--- a/src/main/resources/mensajes/messages_en.properties
+++ b/src/main/resources/mensajes/messages_en.properties
@@ -165,3 +165,7 @@ label.leer=Read
 label.idioma1=Spanish
 label.idioma2=English
 
+label.autoresSeguidos=Followed Authors
+label.selecObraCap=Select the work you want to add a chapter
+label.comentar=Comment
+label.obraVacia=This works has no chapters
