--- a/src/main/resources/mensajes/messages_es.properties
+++ b/src/main/resources/mensajes/messages_es.properties
@@ -169,4 +169,7 @@ label.leer=Leer
 label.idioma1=Español
 label.idioma2=Inglés
 
-
+label.autoresSeguidos = Autores seguidos
+label.selecObraCap=Selecciona la obra a la que deseas añadir capítulo
+label.comentar=Comentar
+label.obraVacia=Esta obra aún no contiene capítulos
